--- a/conf/application.conf
+++ b/conf/application.conf
@@ -67,5 +67,6 @@ logger.application=DEBUG
 #        }
 #    }
 #}
-
+akka.default-dispatcher.core-pool-size-max = 64
+akka.debug.receive = on
 akka.extensions = ["akka.contrib.pattern.DistributedPubSubExtension"]
