refactor to Scala

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -69,4 +69,12 @@ logger.application=DEBUG
 #}
 akka.default-dispatcher.core-pool-size-max = 64
 akka.debug.receive = on
+akka.actor {
+  provider = "akka.cluster.ClusterActorRefProvider"
+
+  default-dispatcher {
+    # Throughput for default Dispatcher, set to 1 for as fair as possible
+    throughput = 10
+  }
+}
 akka.extensions = ["akka.contrib.pattern.DistributedPubSubExtension"]
